# VTS

./: .gitignore  HF_MODEL_CARD.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: infer.py  train.py
src/voice_text_sfx/: pipeline.py
src/voice_text_sfx/autoencoder/: __init__.py  oobleck.py
src/voice_text_sfx/conditioning/: __init__.py  base.py  time.py  timestep.py  voice.py
src/voice_text_sfx/inference/: __init__.py
src/voice_text_sfx/models/: __init__.py  rotary.py  utils.py
src/voice_text_sfx/training/: __init__.py
voice_text_sfx/: __init__.py  config.py
voice_text_sfx/conditioning/: text.py
voice_text_sfx/data/: __init__.py  manifest.py
voice_text_sfx/inference/: sampling.py
voice_text_sfx/models/: attention.py  continuous_transformer.py  feedforward.py  transformer_block.py  voice_conditioned_diffusion.py
voice_text_sfx/training/: utils.py
